# ed3design-skill-bundles

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TECHNICAL-DEBT.md  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  skill_proposal.md
.github/workflows/: validate.yml
async-forensik/: README.md
async-forensik/.claude-plugin/: plugin.json
async-forensik/agents/: forensik-detective.md
async-forensik/skills/async-context-manager-retry-pattern/: SKILL.md
async-forensik/skills/asyncio-fire-and-forget-loop-exit-await/: SKILL.md
async-forensik/skills/asyncpg-live-vs-mock-shape/: SKILL.md
async-forensik/skills/db-telemetry-primary-docker-logs-secondary/: SKILL.md
cad-design/: README.md
cad-design/.claude-plugin/: plugin.json
code-quality/: README.md
code-quality/.claude-plugin/: plugin.json
code-quality/agents/: code-reviewer.md
code-quality/hooks/: commit-message-honesty.sh  cross-repo-state-inspect.sh  hooks.json  pre-push-bypass-audit.sh  pytest-venv-first.sh
maker-fdm/: README.md
maker-fdm/.claude-plugin/: plugin.json
planning-disciplines/: README.md
planning-disciplines/.claude-plugin/: plugin.json
planning-disciplines/agents/: planning-assistant.md
schema-discipline/: README.md
schema-discipline/.claude-plugin/: plugin.json
schema-discipline/agents/: schema-validator.md
scripts/: audit-private-skill-crosslinks.py  audit-promotion-residue.py  audit-skill-descriptions.py  audit-stale-draft-crosslinks.py  fix-yaml-frontmatter.py  normalize-skill-descriptions.py  regenerate-counts.py  repair-deleted-i.py  test-hooks.sh  test-sql-injection-guard.py  test-tools-smoke.sh
skill-system-meta/: README.md
skill-system-meta/.claude-plugin/: plugin.json
skill-system-meta/hooks/: hooks.json  post-session-skill-review-trigger.sh
token-savers/: BACKLOG.md  README.md
token-savers/.claude-plugin/: plugin.json
token-savers/hooks/: hooks.json  vault-first-prompt-detect.sh
token-savers/tools/: db-schema-inspector.py  diff-summary.py  html2md.py  img-preprocess.py  vault-search.py
(+65 files in other folders)
